# hmm_analysis

./: .gitignore  CITATION.cff  README.md  pyproject.toml
.github/workflows/: ci.yml
example/: baum_welch_example.py  multi_sequence_example.py  reconstruction_example.py
src/hmm_analysis/: __init__.py
src/hmm_analysis/baum_welch/: __init__.py
src/hmm_analysis/baum_welch/core/: __init__.py  baum_welch.py  baum_welch_result.py  baum_welch_step.py  result.py  step.py  unoptimized.py
src/hmm_analysis/baum_welch/estimations/: __init__.py  estimate.py  hidden_state_prob.py  transition_prob.py
src/hmm_analysis/baum_welch/variable_updates/: __init__.py  update_emission.py  update_initial.py  update_transition.py  update_variables.py
src/hmm_analysis/forward_backward/: __init__.py  backward.py  forward.py  forward_backward_likelihood.py  likelihood.py
src/hmm_analysis/reconstruction/: __init__.py  reconstruct.py
src/hmm_analysis/utils/: casting.py  expsum_ops.py  proximity.py
tests/: assert_with_error.py  loader.py  test_backward.py  test_baum_welch.py  test_forward.py  test_hidden_state_prob.py  test_reconstruction.py  test_transition_prob.py  test_update_emission.py  test_update_transition.py
tests/data_sets/: corpus.json  five_doors.json  git_hub_test.json
