[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hmm_analysis"
version = "0.0.1"
authors = [
  { name="Uri Goldblatt", email="goldblatt.uri@weizmann.ac.il" },
]
description = "Tools for Hidden Markov Model analysis"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numba",
    "numpy",
    "pytest",
    "tqdm",
]