[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hmm_analysis"
version = "0.1.0"
authors = [
  { name="Uri Goldblatt", email="uri.goldblatt@gmail.com"},
]
description = "Tools for Hidden Markov Model analysis"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numba",
    "numpy",
    "tqdm",
]

[project.optional-dependencies]
test = [
    "pytest",
    "ruff",
]